--- a/FilmLibrary.Configuration/FilmLibrary.Configuration.csproj
+++ b/FilmLibrary.Configuration/FilmLibrary.Configuration.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FilmLibrary.Repoository\FilmLibrary.Repoository.csproj" />
+    <ProjectReference Include="..\FilmLibrary.Repoository\FilmLibrary.Repository.csproj" />
   </ItemGroup>
 
 </Project>
